--- a/Scrapbook/Base.lproj/Main.storyboard
+++ b/Scrapbook/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h1b-9z-V2M" customClass="ClippingDetailViewController">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h1b-9z-V2M">
                                 <rect key="frame" x="20" y="165" width="560" height="128"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4l-m9-L9a">
@@ -77,13 +77,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="h1b-9z-V2M" firstAttribute="top" secondItem="L1M-Ww-nQf" secondAttribute="bottom" constant="101" id="4Sd-7G-K8h"/>
                             <constraint firstAttribute="trailing" secondItem="A4l-m9-L9a" secondAttribute="trailing" id="9GS-hF-KjR"/>
                             <constraint firstItem="A4l-m9-L9a" firstAttribute="top" secondItem="h1b-9z-V2M" secondAttribute="bottom" constant="141" id="FkQ-FF-Kwx"/>
-                            <constraint firstItem="VwI-CO-fwG" firstAttribute="top" secondItem="A4l-m9-L9a" secondAttribute="bottom" constant="101" id="JKe-59-NoP"/>
                             <constraint firstAttribute="trailingMargin" secondItem="h1b-9z-V2M" secondAttribute="trailing" id="O1h-b8-DmV"/>
                             <constraint firstItem="h1b-9z-V2M" firstAttribute="leading" secondItem="L2j-85-VCn" secondAttribute="leadingMargin" id="VHx-TN-ZbX"/>
+                            <constraint firstItem="VwI-CO-fwG" firstAttribute="top" secondItem="A4l-m9-L9a" secondAttribute="bottom" constant="101" id="fKt-JN-dTZ"/>
                             <constraint firstItem="A4l-m9-L9a" firstAttribute="leading" secondItem="L2j-85-VCn" secondAttribute="leading" id="fXn-hT-6UD"/>
+                            <constraint firstItem="h1b-9z-V2M" firstAttribute="top" secondItem="L1M-Ww-nQf" secondAttribute="bottom" constant="101" id="gS6-dX-rtd"/>
                         </constraints>
                     </view>
                     <connections>
